# realesrgan-ncnn-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI-Linux-x64-Clang.yml  CI-Linux-x64-GCC.yml  CI-MacOS-Universal-Clang.yml  CI-Windows-x64-MSVC.yml  Release.yml  test_pip.yml
src/: CMakeLists.txt  realesrgan_ncnn_vulkan.py  realesrgan_wrapped.cpp  realesrgan_wrapped.h
src/Real-ESRGAN-ncnn-vulkan/src/: realesrgan.cpp  realesrgan.h
src/realesrgan_ncnn_py/: __init__.py  realesrgan_ncnn_vulkan.py
test/: requirements.txt  test_realesrgan.py
tests/: test_realesrgan.py
